Add relx config

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,11 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
 
-{shell, [
-  % {config, "config/sys.config"},
-    {apps, [devmode]}
-]}.
+{relx,
+ [
+  {release, {devmode, git},
+   [
+    kernel, stdlib
+   ]},
+  {extended_start_script, true}
+ ]}.
